# Mantis

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  turbo.json
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts  redis-global.module.ts  tracing.ts
apps/api/src/adapters/: redis-io.adapter.ts
apps/api/src/ai-concierge/: ai-concierge.controller.ts  ai-concierge.module.ts
apps/api/src/ai-pricing/: ai-pricing.controller.ts  ai-pricing.module.ts
apps/api/src/ai-search/: ai-search.controller.ts  ai-search.module.ts
apps/api/src/analytics/: analytics.controller.ts  analytics.service.ts
apps/api/src/api-keys/: api-keys.controller.ts  api-keys.module.ts  api-keys.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  google.strategy.ts  jwt.strategy.ts
apps/api/src/chaos/: chaos.module.ts
apps/api/src/circuit-breaker/: circuit-breaker.module.ts  circuit-breaker.service.ts
apps/api/src/data-residency/: data-residency.module.ts
apps/api/src/distributed-lock/: distributed-lock.module.ts  distributed-lock.service.ts
apps/api/src/email/: email.service.ts
apps/api/src/experts/: experts.controller.ts  experts.service.ts
apps/api/src/feature-flags/: feature-flags.controller.ts  (+1 more)
apps/recommender/: Dockerfile  main.py  pyproject.toml
apps/web/: Dockerfile  next.config.ts  package.json  vercel.json
apps/web/messages/: en.json  es.json
apps/web/public/: manifest.json
apps/web/src/: middleware.ts
(+48 files in other folders)
