name = "mantis-recommender"
version = "0.1.0"
description = "MANTIS ML Recommender — Collaborative filtering for expert matching"

[dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
